Related tdf#162136: typo GapWidthSequence instead of GapwidthSequence

Fixes the crash with bt:
8  0x00007fd839b91fef in cppu::OPropertySetHelper::getFastPropertyValue(int) (this=0x5578a9fb8b08, nHandle=-1) at /home/julien/lo/libreoffice/cppuhelper/source/propshlp.cxx:553
9  0x00007fd839b8e1c9 in cppu::OPropertySetHelper::getPropertyValue(rtl::OUString const&) (this=0x5578a9fb8b08, rPropertyName="GapwidthSequence")
   at /home/julien/lo/libreoffice/cppuhelper/source/propshlp.cxx:277
10 0x00007fd7ef4e19e5 in chart::wrapper::SeriesOptionsItemConverter::ApplySpecialItem(unsigned short, SfxItemSet const&)
   (this=0x5578a3989070, nWhichId=77, rItemSet=SfxItemSet of pool 0x5578a9fde810 with parent 0x0 and Which ranges: [(1, 13), (17, 17), (29, 38), (39, 39), (71, 71), (74, 74), (75, 75), (76, 78), (82, 89), (1000, 1012), (1014, 1034), (1177, 1232), (4021, 4076), (10085, 10086), (10932, 10932), (11090, 11090)] = {...})
   at /home/julien/lo/libreoffice/chart2/source/controller/itemsetwrapper/SeriesOptionsItemConverter.cxx:212
11 0x00007fd7ef4d3939 in chart::wrapper::ItemConverter::ApplyItemSet(SfxItemSet const&)
   (this=0x5578a3989070, rItemSet=SfxItemSet of pool 0x5578a9fde810 with parent 0x0 and Which ranges: [(1, 13), (17, 17), (29, 38), (39, 39), (71, 71), (74, 74), (75, 75), (76, 78), (82, 89), (1000, 1012), (1014, 1034), (1177, 1232), (4021, 4076), (10085, 10086), (10932, 10932), (11090, 11090)] = {...}) at /home/julien/lo/libreoffice/chart2/source/controller/itemsetwrapper/ItemConverter.cxx:186
12 0x00007fd7ef4ba805 in chart::wrapper::DataPointItemConverter::ApplyItemSet(SfxItemSet const&)
   (this=0x5578a3767050, rItemSet=SfxItemSet of pool 0x5578a9fde810 with parent 0x0 and Which ranges: [(1, 13), (17, 17), (29, 38), (39, 39), (71, 71), (74, 74), (75, 75), (76, 78), (82, 89), (1000, 1012), (1014, 1034), (1177, 1232), (4021, 4076), (10085, 10086), (10932, 10932), (11090, 11090)] = {...}) at /home/julien/lo/libreoffice/chart2/source/controller/itemsetwrapper/DataPointItemConverter.cxx:291
13 0x00007fd7ef532167 in chart::ChartController::executeDlg_ObjectProperties_withUndoGuard(std::shared_ptr<chart::UndoGuard>, rtl::OUString const&, bool)::$_0::operator()(int) const
   (this=0x5578a3916fb0, nResult=1) at /home/julien/lo/libreoffice/chart2/source/controller/main/ChartController_Properties.cxx:801

but not the following one:
8  0x00007f06e6d91fef in cppu::OPropertySetHelper::getFastPropertyValue(int) (this=0x561ec293bb88, nHandle=-1) at /home/julien/lo/libreoffice/cppuhelper/source/propshlp.cxx:553
9  0x00007f06e6d8e1c9 in cppu::OPropertySetHelper::getPropertyValue(rtl::OUString const&) (this=0x561ec293bb88, rPropertyName="OverlapSequence")
   at /home/julien/lo/libreoffice/cppuhelper/source/propshlp.cxx:277
10 0x00007f06a4ce19e5 in chart::wrapper::SeriesOptionsItemConverter::ApplySpecialItem(unsigned short, SfxItemSet const&)
   (this=0x561ebb729a90, nWhichId=76, rItemSet=SfxItemSet of pool 0x561ec2921fb0 with parent 0x0 and Which ranges: [(1, 13), (17, 17), (29, 38), (39, 39), (71, 71), (74, 74), (75, 75), (76, 78), (82, 89), (1000, 1012), (1014, 1034), (1177, 1232), (4021, 4076), (10085, 10086), (10932, 10932), (11090, 11090)] = {...})
   at /home/julien/lo/libreoffice/chart2/source/controller/itemsetwrapper/SeriesOptionsItemConverter.cxx:212
11 0x00007f06a4cd3939 in chart::wrapper::ItemConverter::ApplyItemSet(SfxItemSet const&)
   (this=0x561ebb729a90, rItemSet=SfxItemSet of pool 0x561ec2921fb0 with parent 0x0 and Which ranges: [(1, 13), (17, 17), (29, 38), (39, 39), (71, 71), (74, 74), (75, 75), (76, 78), (82, 89), (1000, 1012), (1014, 1034), (1177, 1232), (4021, 4076), (10085, 10086), (10932, 10932), (11090, 11090)] = {...}) at /home/julien/lo/libreoffice/chart2/source/controller/itemsetwrapper/ItemConverter.cxx:186
12 0x00007f06a4cba805 in chart::wrapper::DataPointItemConverter::ApplyItemSet(SfxItemSet const&)
   (this=0x561ebc2cdd90, rItemSet=SfxItemSet of pool 0x561ec2921fb0 with parent 0x0 and Which ranges: [(1, 13), (17, 17), (29, 38), (39, 39), (71, 71), (74, 74), (75, 75), (76, 78), (82, 89), (1000, 1012), (1014, 1034), (1177, 1232), (4021, 4076), (10085, 10086), (10932, 10932), (11090, 11090)] = {...}) at /home/julien/lo/libreoffice/chart2/source/controller/itemsetwrapper/DataPointItemConverter.cxx:291
13 0x00007f06a4d32167 in chart::ChartController::executeDlg_ObjectProperties_withUndoGuard(std::shared_ptr<chart::UndoGuard>, rtl::OUString const&, bool)::$_0::operator()(int) const
   (this=0x561ec2939c20, nResult=1) at /home/julien/lo/libreoffice/chart2/source/controller/main/ChartController_Properties.cxx:801

Change-Id: I53d8f9130a0a6cc17214c881398a6679a92606cd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170902
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins